// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should MovieHeader render correctly should render with disabled add in list button 1`] = `
<div
  className="movie-card__desc"
>
  <h2
    className="movie-card__title"
  >
    The Grand Budapest Hotel
  </h2>
  <p
    className="movie-card__meta"
  >
    <span
      className="movie-card__genre"
    >
      Drama
    </span>
    <span
      className="movie-card__year"
    >
      2000
    </span>
  </p>
  <div
    className="movie-card__buttons"
  >
    <a
      className="btn btn--play movie-card__button"
      href="/video/Hotel-2000"
      onClick={[Function]}
    >
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
      >
        <use
          xlinkHref="#play-s"
        />
      </svg>
      <span>
        Play
      </span>
    </a>
    <button
      className="btn btn--list movie-card__button"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <svg
        height="20"
        viewBox="0 0 19 20"
        width="19"
      >
        <use
          xlinkHref="#add"
        />
      </svg>
      <span>
        My list
      </span>
    </button>
    <a
      className="btn movie-card__button"
      href="/review/Hotel-2000"
      onClick={[Function]}
    >
      Add review
    </a>
  </div>
</div>
`;

exports[`Should MovieHeader render correctly should render with no authorized user 1`] = `
<div
  className="movie-card__desc"
>
  <h2
    className="movie-card__title"
  >
    The Grand Budapest Hotel
  </h2>
  <p
    className="movie-card__meta"
  >
    <span
      className="movie-card__genre"
    >
      Drama
    </span>
    <span
      className="movie-card__year"
    >
      2000
    </span>
  </p>
  <div
    className="movie-card__buttons"
  >
    <a
      className="btn btn--play movie-card__button"
      href="/video/Hotel-2000"
      onClick={[Function]}
    >
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
      >
        <use
          xlinkHref="#play-s"
        />
      </svg>
      <span>
        Play
      </span>
    </a>
    <a
      className="btn btn--list movie-card__button"
      href="/login"
      onClick={[Function]}
    >
      <svg
        height="20"
        viewBox="0 0 19 20"
        width="19"
      >
        <use
          xlinkHref="#add"
        />
      </svg>
      <span>
        My list
      </span>
    </a>
    <a
      className="btn movie-card__button"
      href="/review/Hotel-2000"
      onClick={[Function]}
    >
      Add review
    </a>
  </div>
</div>
`;

exports[`Should MovieHeader render correctly should render with review button 1`] = `
<div
  className="movie-card__desc"
>
  <h2
    className="movie-card__title"
  >
    The Grand Budapest Hotel
  </h2>
  <p
    className="movie-card__meta"
  >
    <span
      className="movie-card__genre"
    >
      Drama
    </span>
    <span
      className="movie-card__year"
    >
      2000
    </span>
  </p>
  <div
    className="movie-card__buttons"
  >
    <a
      className="btn btn--play movie-card__button"
      href="/video/Hotel-2000"
      onClick={[Function]}
    >
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
      >
        <use
          xlinkHref="#play-s"
        />
      </svg>
      <span>
        Play
      </span>
    </a>
    <button
      className="btn btn--list movie-card__button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        height="20"
        viewBox="0 0 19 20"
        width="19"
      >
        <use
          xlinkHref="#add"
        />
      </svg>
      <span>
        My list
      </span>
    </button>
    <a
      className="btn movie-card__button"
      href="/review/Hotel-2000"
      onClick={[Function]}
    >
      Add review
    </a>
  </div>
</div>
`;

exports[`Should MovieHeader render correctly should render without review button 1`] = `
<div
  className="movie-card__desc"
>
  <h2
    className="movie-card__title"
  >
    The Grand Budapest Hotel
  </h2>
  <p
    className="movie-card__meta"
  >
    <span
      className="movie-card__genre"
    >
      Drama
    </span>
    <span
      className="movie-card__year"
    >
      2000
    </span>
  </p>
  <div
    className="movie-card__buttons"
  >
    <a
      className="btn btn--play movie-card__button"
      href="/video/Hotel-2000"
      onClick={[Function]}
    >
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
      >
        <use
          xlinkHref="#play-s"
        />
      </svg>
      <span>
        Play
      </span>
    </a>
    <button
      className="btn btn--list movie-card__button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        height="20"
        viewBox="0 0 19 20"
        width="19"
      >
        <use
          xlinkHref="#add"
        />
      </svg>
      <span>
        My list
      </span>
    </button>
  </div>
</div>
`;
